[package]
name = "wsts-blueprint"
version = "0.1.0"
description = "A WSTS Blueprint that can run keygen and signing jobs on demand from the Tangle network"
edition = "2021"

[package.metadata.blueprint]
manager = { Evm = "WstsBlueprint" }
master_revision = "Latest"

[dependencies]
# Gadget dependencies
blueprint-sdk = { git = "https://github.com/tangle-network/gadget-workspace/", branch = "serial/sdk", features = ["tangle", "p2p", "local-store", "macros", "networking", "round-based-compat"] }
gadget-macros = { git = "https://github.com/tangle-network/gadget-workspace/", branch = "serial/sdk" }
color-eyre = { version = "0.6", features = ["tracing-error", "color-spantrace"] }
hex = { version = "0.4.3", default-features = false }
k256 = { version = "0.13.3", default-features = false }
serde = { version = "1.0.214", features = ["derive", "rc"] }
round-based = { version = "0.3.2", features = ["runtime-tokio", "derive", "round-based-derive"] }
thiserror = "2.0.3"
itertools = "0.13.0"
rand = "0.8.5"
parking_lot = { version = "0.12.3", features = ["serde"]}
p256k1 = "^5"
frost-secp256k1-tr = { git = "https://github.com/webb-tools/tangle.git", branch = "main", features = ["std"]}

# MPC specific deps
wsts = "3.0.0"

[build-dependencies]
blueprint-sdk = { git = "https://github.com/tangle-network/gadget-workspace/", branch = "serial/sdk",  features = ["build"] }

[dev-dependencies]
blueprint-sdk = { git = "https://github.com/tangle-network/gadget-workspace/", branch = "serial/sdk", features = ["testing"] }

[features]
default = ["std"]
std = []
