[package]
name = "wsts-blueprint"
version = "0.2.0"
description = "A WSTS Blueprint that can run keygen and signing jobs on demand from the Tangle network"
edition = "2021"

[dependencies]
blueprint-sdk = { git = "https://github.com/tangle-network/blueprint.git", branch = "main", default-features = false, features = [
    "std",
    "tracing",
    "macros",
    "tangle",
    "networking",
    "local-store",
    "round-based-compat",
] }
crossbeam-channel = "0.5"
hex = { version = "0.4.3", default-features = false }
libp2p = { version = "0.54", default-features = false }
serde = { version = "1", features = ["derive"] }
round-based = { version = "0.4.1", features = ["runtime-tokio", "derive"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1", default-features = false, features = ["sync", "rt"] }
futures = "0.3"
rand = "0.8"
parking_lot = { version = "0.12", features = ["serde"] }
itertools = "0.13"

# MPC specific deps
wsts = "3.0.0"
p256k1 = "5.4"
frost-secp256k1-tr = "2"

[dev-dependencies]
blueprint-sdk = { git = "https://github.com/tangle-network/blueprint.git", branch = "main", default-features = false, features = ["std", "tangle", "testing", "networking", "round-based-compat"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "test-util"] }
tracing-subscriber = "0.3"

[features]
default = ["std"]
std = []
